# dictara

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.claude/commands/: teachme.md
.github/workflows/: ci.yml  deploy-landing.yml  release.yml
landing/: index.html  package-lock.json  package.json  vite.config.ts
landing/public/: CNAME
landing/src/: App.tsx  index.css
landing/src/components/: Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  SoundWave.tsx
landing/src/hooks/: useDownload.ts
notes/: ui.drawio
scripts/: dump-config.sh
src/: App.tsx  RecordingPopup.css  RecordingPopup.tsx  bindings.ts  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_recorder.rs  config.rs  keyboard_listener.rs  keychain.rs  lib.rs  main.rs  setup.rs  sound_player.rs  tauri_commands.rs  updater.rs
src-tauri/src/clients/: openai.rs
src-tauri/src/recording/: audio_recorder.rs  commands.rs  controller.rs  mod.rs
src-tauri/src/ui/: menu.rs  tray.rs  window.rs
src/components/: AudioVisualizer.tsx  PreferencesForm.tsx
src/components/onboarding/: KeyboardVisual.tsx  OnboardingLayout.tsx  StepContainer.tsx  Stepper.tsx  utils.ts
src/components/preferences/: About.tsx  ApiKeys.tsx  PreferencesForm.tsx  PreferencesLayout.tsx  Updates.tsx
src/hooks/: use-mobile.tsx  useAppConfig.ts  useAzureOpenAIConfig.ts  useCheckForUpdates.ts  useOnboardingConfig.ts  useOnboardingNavigation.ts  useOpenAIConfig.ts  useRecording.ts  useSaveAppConfig.ts
(+36 files in other folders)
