[package]
name = "dictara"
version = "0.1.3"
description = "A Tauri App"
authors = ["Dictara Contributors"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dictara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/fufesou/rdev" }
macos-accessibility-client = "0.0.1"
cpal = "0.15"
hound = "3.5"
rubato = "0.16"
async-openai = "0.20"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
dotenvy = "0.15"
arboard = "3.3"
image = "0.25.9"
derive_more = { version = "2.1.0", features = ["from", "display"] }
rodio = "0.19"
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = "0.3.1"  # For direct CGEvent posting (Option 3)
objc2-core-foundation = "0.3.1"
objc2-app-kit = { version = "0.3.1", features = ["NSWindow", "NSResponder", "NSRunningApplication", "NSWorkspace"] }
objc2 = "0.6"
